--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -90,16 +90,16 @@ body {
   background: #e91e63;
 }
 
-.newBookmark {
+#newBookmark {
   height: 11vw;
-  width: 40vw;
+  min-width: fit-content;
   display: inline-flex;
   margin: 15px;
-  background-color: #a7e6d4;
+  background-color: #3f51b5;
   border: none;
 }
 
-.newBookmark p {
+#newBookmark p {
   height: 5vw;
   line-height: 5vw;
   color: #232323;
@@ -107,9 +107,10 @@ body {
   width: 100%;
   margin: 0 auto;
   margin-top: 3vw;
+  padding: 0 10vw;
 }
 
-.newBookmark i {
+#newBookmark i {
   color: #a7e6d4;
 }
 
